2003-10-21  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-hbci-utils.c: Refactor some GUI
	code. Improve user messages.

2003-10-20  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/hbci-interaction.c,
	gnc-hbci-getbalance.c, dialog-hbcitrans.c: Improved user messages.

	* src/import-export/hbci/gnc-hbci-utils.c: Fixed extremly stupid,
	old bug that causes weird HBCI errors.

2003-10-18  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/druid-hbci-initial.c: Fix and initially
	implement handling of multiple banks/users/customers.

	* src/import-export/hbci/dialog-hbcitrans.c: Fix handling of HBCI
	direct debits (fix wrong textkey).

2003-10-01  Derek Atkins  <derek@ihtfp.com>

	* src/backend/postgres/gncquery.c:  Linas broke SQL when we renamed
	  the QueryObjects to QofClass.

2003-09-30  Derek Atkins  <derek@ihtfp.com>

	* src/engine/gnc-date.h: add a comment about minimum string length
	* src/engine/Transaction.c: fix the ISO_DATELEN to be "long enough"
	  Fixes #123558

2003-09-18  Christian Stimming  <stimming@tuhh.de>

	* configure.in: Add correct configure test for openhbci version
	required by mt940 module.

2003-09-16  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-hbci-kvp.c: Fix broken compile due to
	Linas' change of the kvp_frame_get_frame() arguments. By
	Jan-Pascal van Best <j.p.vanbest@tbm.tudelft.nl>

	* src/import-export/hbci/gnc-hbci-gettrans.[hc]: Code
	refactorization so that the mt940 importer can re-use the existing
	import functions from the hbci module. By Jan-Pascal van Best
	<j.p.vanbest@tbm.tudelft.nl>

	* src/import-export/mt940/gncmod-mt940-import.[hc]: Import module
	for SWIFT MT940 files added. By Jan-Pascal van Best
	<j.p.vanbest@tbm.tudelft.nl>

2003-09-14  Derek Atkins  <derek@ihtfp.com>

	* src/backend/postgres/test/run-tests.sh: small fix from
	  hawkfan to get tests to work when building outside srcdir.