@@ -1,3 +1,10 @@
+2003-10-23  Derek Atkins  <derek@ihtfp.com>
+
+	* src/app-utils/prefs.scm:
+	* src/business/business-utils/business-prefs.scm:
+	  Add new preferences for the default "fancy date format",
+	  even if it's not used, yet.  Another step to fixing #99574
+
 2003-10-21  Christian Stimming  <stimming@tuhh.de>
 
 	* src/import-export/hbci/gnc-hbci-utils.c: Refactor some GUI
